Replaced calls to "new Boolean(boolean)" with "Boolean.valueOf(boolean)".